data/objects/Connection__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Connections</relationshipLabel>
        <relationshipName>Connections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>D365ConnectionGuid__c</fullName>
        <externalId>true</externalId>
        <label>D365ConnectionGuid</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>D365record1Guid__c</fullName>
        <label>D365record1Guid</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D365record2Guid__c</fullName>
        <label>D365record2Guid</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DoNotReport__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if these connections don&apos;t need to be on reports</description>
        <label>Do Not Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Connections</relationshipLabel>
        <relationshipName>Connections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Push_to_D365__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Push to D365</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Board Member</fullName>
                </value>
                <value>
                    <fullName>Cenergistic Consultant</fullName>
                </value>
                <value>
                    <fullName>Cenergistic Energy Specialist</fullName>
                </value>
                <value>
                    <fullName>CFO</fullName>
                </value>
                <value>
                    <fullName>Chief Administrator</fullName>
                </value>
                <value>
                    <fullName>Communications POC</fullName>
                </value>
                <value>
                    <fullName>Corporate Office</fullName>
                </value>
                <value>
                    <fullName>Energy Specialist</fullName>
                </value>
                <value>
                    <fullName>Head Finance</fullName>
                </value>
                <value>
                    <fullName>Head M and O</fullName>
                </value>
                <value>
                    <fullName>Legal Counsel</fullName>
                </value>
                <value>
                    <fullName>Market Consultant</fullName>
                </value>
                <value>
                    <fullName>Marketer</fullName>
                </value>
                <value>
                    <fullName>President</fullName>
                </value>
                <value>
                    <fullName>Program Liaison</fullName>
                </value>
                <value>
                    <fullName>Senior Pastor</fullName>
                </value>
                <value>
                    <fullName>Superintendent</fullName>
                </value>
                <value>
                    <fullName>25th Anniversary Specialist Guests</fullName>
                </value>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Assistant Energy Manager</fullName>
                </value>
                <value>
                    <fullName>Attorney</fullName>
                </value>
                <value>
                    <fullName>Billing Contact</fullName>
                </value>
                <value>
                    <fullName>Board President</fullName>
                </value>
                <value>
                    <fullName>Business POC</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>Data Clerk</fullName>
                </value>
                <value>
                    <fullName>Data Release Lead</fullName>
                </value>
                <value>
                    <fullName>Dean</fullName>
                </value>
                <value>
                    <fullName>EEM Recruiting Contact</fullName>
                </value>
                <value>
                    <fullName>ES Recruiting Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Connection</label>
    <listViews>
        <fullName>Active_Connections</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Organization__c</columns>
        <columns>Contact__c</columns>
        <columns>Role__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Connections</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Organization__c</columns>
        <columns>Contact__c</columns>
        <columns>Role__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Connections</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Organization__c</columns>
        <columns>Contact__c</columns>
        <columns>Role__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Connections</label>
    </listViews>
    <listViews>
        <fullName>Connections_with_Contact_No_Role</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Organization__c</columns>
        <columns>Contact__c</columns>
        <columns>Role__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contact__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Role__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Start_Date__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>End_Date__c</field>
            <operation>equals</operation>
        </filters>
        <label>Conn with Contact No Role No Dates</label>
    </listViews>
    <listViews>
        <fullName>Connections_with_No_Contacts</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Organization__c</columns>
        <columns>Contact__c</columns>
        <columns>Role__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contact__c</field>
            <operation>equals</operation>
        </filters>
        <label>Connections with No Contacts</label>
    </listViews>
    <listViews>
        <fullName>Inactive_Connections</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Organization__c</columns>
        <columns>Contact__c</columns>
        <columns>Role__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Inactive Connections</label>
    </listViews>
    <nameField>
        <displayFormat>Connect-{0000000}</displayFormat>
        <label>Connection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Connections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>